# ccline

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  bench-input.json  bench.sh  dist-workspace.toml  hk.pkl  mise.toml  statusline.sh
.github/: dependabot.yml
bench/: bench-input.json  ccline.sh
docs/plans/: 2026-03-06-status-line-design.md  2026-03-06-status-line-implementation.md  2026-03-06-v02-layout-design.md  2026-03-06-v02-layout-implementation.md
src/: main.rs
tests/: cli.rs
