[package]
name = "ccline"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/tinnet/ccline"

[dependencies]
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"

[profile.release]
lto = "thin"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
